# trying-llms

./: .gitignore  AGENTS.md  compose.yml  eval.py  pyproject.toml  train.py  train_sft.py
.devcontainer/: devcontainer.json  dockerfile.devcontainer
ERNIE-4.5-21B-A3B-Thinking/: main.py
gemma3/: eval.py  eval_sft.py  train.py
